client/src/pages/Browse.css
@font-face {
  font-family: "Bookerly";
  src: url("../fonts/Bookerly-BoldItalic.woff2") format("woff2"),
    url("../fonts/Bookerly-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

.filter {
  display: flex;
  flex-direction: column;
  /* height: 100%; */
  width: 40%;
  max-width: 245px;
  margin-right: 20px;
  padding: 10px 20px;
  /* background-color: orange; */
}

/* .filter__content label {
  margin-bottom: 5px;
}

.filter__content input{
  margin-bottom: 10px;
  padding: 5px;
} */

/* .no-results,
.loading {
  width: 100%;
  margin: auto;
} */

.results {
  width: 100%;
  /* margin: auto; */
  position: relative;
}

.results-text {
  /* display: flex; */
  /* position: absolute; */
  /* top: 0; */
}

.results-text h3 {
  /* margin-right: 30px; */
}

.results-text button {
  /* height: 30px; */
  /* padding: 5px; */
}

/* .reset-button {

} */

.browse-container {
  display: flex;
  max-width: 1350px;
  margin: 20px auto 40px auto;
  padding: 20px 50px;
  height: 100%;
  min-height: 100vh;
  /* margin: 20px auto 40px auto;
  padding: 20px 50px;
  height: 100%;
  min-height: 100vh; */
  /* display: flex; */
  /* flex-wrap: wrap; */
  /* width: 1300px; */
  /* max-width: 100%; */
  /* height: 100%; */
  /* background-color: white;
  margin: 10px auto;
  justify-content: space-between; */
  /* justify-content: center; */
  /* padding: 40px 50px; */
}

.browse-content {
  display: flex;
  /* direction: column; */
  /* flex-wrap: wrap; */
}

.filter {
  display: flex;
  flex-direction: column;
  width: 20vw;
  min-width: 250px;
  background-color: #fff6e5;
  /* box-shadow: 2px 5px; */
  border: 0.5px solid black;
  height: 70vh;
  /* width: 100%; */
  /* margin: 20px; */
  /* height: 30px; */
}

.filter-header{
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}
.filter-header > h2 {
    font-size: 15px;
    margin-right: 20px;
}
.reset-button {
    font-size: 12.5px;
    padding: 5px;
    background: #fff6e5;
}
.reset-button:hover {
    background: #d4cdbe;
}

.filter-content {
    max-width: 100%;
}

.filter-country label, .filter-country input{
    font-size: 12.5px;
    max-width: 100%;
}

/* .filter-helper > h1 {
    margin-right: 20px;
} */

.browse-cards {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  max-width: 55vw;
  width: 70vw;
  background-color: #fff6e5;
  /* box-shadow: 2px 5px; */
  border: 0.5px solid black;
  /* justify-content: center;
  align-items: center; */
  min-height: 50%;
}

.no-results {
    padding: 30px;
}

/* .results-container {
  height: 100%;
  width: 80vw;
  display: flex;
  background-color: #fff6e5;

} */


@media (max-width: 768px) {
  .results-container {
    display: flex;
    flex-direction: column;
  }

  .browse-cards {
    margin-bottom: auto;
    min-width: 100%;
    max-width: 100%;
    padding: 20px;
  }

  .browse-container{
    width: 100vw;
  }

  .browse-content{
    display: flex;
    flex-direction: column;
    min-width: 100%;
  }

  .filter {
    width: 100%;
    max-width: 100%;
    max-height: 30vh;
    margin-bottom: 20px;
  }

  /* .results-container {
    max-width: 100%;
  } */
}

